Add an endpoint to print a maze
