# docs/swagger.yaml
@@ -90,9 +90,9 @@ paths:
         operations.
       operationId: login
       parameters:
-      - description: Credentials
+      - description: Login credentials
         in: body
-        name: email
+        name: credentials
         required: true
         schema:
           $ref: '#/definitions/app.LoginCredentialsDTO'
@@ -213,6 +213,43 @@ paths:
       summary: Get one specific maze belonging to the current user
       tags:
       - Maze
+  /maze/{id}/print:
+    get:
+      consumes:
+      - application/json
+      operationId: PrintMaze
+      parameters:
+      - description: maze id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              type: integer
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/app.Message'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/app.Message'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Message'
+      security:
+      - bearerAuth: []
+      summary: Print one specific maze belonging to the current user
+      tags:
+      - Maze
   /maze/{id}/solution:
     get:
       consumes:
@@ -245,6 +282,10 @@ paths:
             $ref: '#/definitions/app.Message'
         "403":
           description: Forbidden
+          schema:
+            $ref: '#/definitions/app.Message'
+        "408":
+          description: Request Timeout
           schema:
             $ref: '#/definitions/app.Message'
         "500":
